--- a/lab/bottega/index.htm
+++ b/lab/bottega/index.htm
@@ -25,35 +25,37 @@
 
 <br><br>
 
-<FONT FACE="VERDANA" size="4" color="#0a674a">
-
-<b><i>
+<FONT FACE="VERDANA" size="4" color="#0a674a"><b><i>
 
 Il nostro laboratorio è un luogo di ricerca, scoperta e proposizione sociale. Attivo da trentacinque anni, abbiamo messo a punto un'ampia e ricca offerta di prodotti genuini tesi a stravolgere le cose in modo da migliorare così fortemente la qualità della vita, individuale e sociale, da non avere più nulla a che vedere con la presente fetenzìa. Qui presentiamo i nostri gioielli come fosse già operativa una delle nostre proposte più incisive:
 
+</i></b></font>
+
 <br><br><br>
 
-<a class="violetnoline" href="../mercato/index.htm" target="mercato">Il Mercato delle Innovazioni Sociali</a>
+<strong>
 
-</i>
+<span style="font-family: Verdana; font-size: 20px;">
+
+<a class="violetnoline" href="../mercato/index.htm" target="mercato">IL MERCATO DELLE INNOVAZIONI SOCIALI</a>
 
 <br>
 
-<a class="nolinegreen" href="teoria.htm">L A <img src="blank.gif" border="0"> T E O R I A</a>
+<a class="violetnoline" href="teoria.htm">L A <img src="blank.gif" border="0"> T E O R I A</a>
 
 <img src="blank.gif" width="77pt">
 
-<a class="nolinegreen" href="prodotti.htm">I <img src="blank.gif" border="0"> P R O D O T T I</a>
+<a class="violetnoline" href="prodotti.htm">I <img src="blank.gif" border="0"> P R O D O T T I</a>
 
 <br><br>
 
-<a class="nolinegreen" href="kunstwerk.htm">L E <img src="blank.gif" border="0"> I D E E : <img src="blank.gif" border="0"> O P E R E <img src="blank.gif" border="0"> D ' A R T E</a>
+<a class="violetnoline" href="kunstwerk.htm">L E <img src="blank.gif" border="0"> I D E E : <img src="blank.gif" border="0"> O P E R E <img src="blank.gif" border="0"> D ' A R T E</a>
+
+</span>
+
+</strong>
 
 <br><br><br><br>
-
-</b>
-
-</FONT>
 
 </td></tr></table></center>
 
