--- a/lab/bottega/kunstwerk.htm
+++ b/lab/bottega/kunstwerk.htm
@@ -26,8 +26,6 @@
 
 <font face="verdana" size="5" color="black"><i>La bottega del Laboratorio Eudemonia</i></font>
 
-</center>
-
 <br><br>
 
 <hr size="5" color="gold">
@@ -38,7 +36,7 @@
 
 Il pensiero evolutivo, in ambito culturale, morale e politico, sociale, è forse l'unica produzione umana sistematicamente rifiutata e non ricompensata dal sistema. I reggenti di questo non possono permettere siano messe in discussione le basi sulle quali sono cresciuti ricchi e potenti. Le conseguenze però ognuno le vede e patisce. Urge dunque istituire un Brevetto delle Idee, così che si possa aprire un Mercato delle Innovazioni Sociali, e finalmente, potendo ricevere un adeguato compenso, gli Umani potranno dedicarsi a questa attività.
 
-</font></i>
+</i></B></font>
 
 </td><td width="50%" align="right" valign="top">
 
@@ -46,7 +44,7 @@ Il pensiero evolutivo, in ambito culturale, morale e politico, sociale, è forse
 
 Anche allo scopo di promuovere questa nuova via, di seguito espongo alcune mie opere d'arte mentale sotto forma di beni digitali. Il prezzo di ognuna, pur notevole per la mia persona, non è che l'infinitesima frazione di una elemosina rispetto alle immense fortune dilapidate per mantenere diverse generazioni di esperti e professori, filosofi e ricercatori, artisti e letterati, taniche di pensiero, politici, movimenti e partiti, senza che tutta questa sterminata truppa di falliti abbia mai prodotto nulla che avesse valore e facesse progredire.
 
-</font></i>
+</i></b></font>
 
 </td></tr></table></center>
 
@@ -56,10 +54,10 @@ Anche allo scopo di promuovere questa nuova via, di seguito espongo alcune mie o
 
 Pensate a tutte le grandi personalità nelle quali avete riposto tanta fiducia,<br>
 che tanto avete stimato. Tra tutti loro, non c'è stato alcuno che abbia saputo produrre<br>
-anche uno solo dei Documenti seguono. E giudicate da voi stessi se non avrebbero dovuto.<br>
+anche uno solo dei Documenti che seguono. E giudicate da voi stessi se non avrebbero dovuto.<br>
 Queste lettere, questi saggi, hanno un valore storico enorme. Perché cambiano il corso della Storia. 
 
-</font></i>
+</i></b></font>
 
 <br><br><br><br><br><br>
 
@@ -87,6 +85,8 @@ Opera immessa su network perenne <a class="gold" href="https://coinmarketcap.com
 
 Somma richiesta: 7.000.000 (sette milioni) di Algorand<br>
 La licenza è nell'ultima pagina della Lettera
+
+</b></font>
 
 </div>
 
@@ -117,6 +117,8 @@ Opere immesse su network perenne <a class="gold" href="https://coinmarketcap.com
 Somma richiesta: 9.000.000 (nove milioni) di Algorand<br>
 La licenza è presente nel frontespizio della Collezione 
 
+</b></font>
+
 </div>
 
 <br><br><br>
@@ -146,22 +148,25 @@ Opere immesse su network perenne <a class="gold" href="https://coinmarketcap.com
 Somma richiesta: 27.000.000 (ventisette milioni) di Algorand<br>
 La licenza è presente nel frontespizio della Collezione
 
+</b></font>
+
 </div>
 
 <br><br>
 <br><br>
-<br><br>
+
+<font size="4" color="272726"><b>
 
 Chi più non trovasse soddisfazione nell'arte convenzionale, chi confida e vuole investire<br>
 nella crescita del valore di questi nuovi capolavori, dal contenuto ad alta sostanza cultural evolutiva,<br>
 pacificamente più stravolgente della più sanguinaria delle rivoluzioni,<br>
 trova qui i <a class="gold" href="../eulab/indirizzi.htm" target="eulab">contatti</a> del Laboratorio Eudemonia. 
 
-<br><br><br>
-
-</i></b></font>
+</b></font> 
 
 </td></tr></table></center>
+
+<br><br>
 
 <hr size="5" color="gold">
 
@@ -174,10 +179,6 @@ trova qui i <a class="gold" href="../eulab/indirizzi.htm" target="eulab">contatt
 </i></b></font>
 
 </center>
-
-</FONT>
-
-</td></tr></table></center>
 
 </td></tr></table></center>
 
