--- a/lab/eulab/indirizzi.htm
+++ b/lab/eulab/indirizzi.htm
@@ -58,8 +58,8 @@
 user = "eulab";
 site = "hyperlinker.org";
 
-user1 = "hyperlinker";
-site1 = "disroot.org";
+user1 = "eulab";
+site1 = "hyperlinker.org";
 
 document.write('<font face=arial color=white size=2><a class=ll03 href=http://www.hyperlinker.org target="hyperlinker">www.hyperlinker.org</a> - <a class=ll03 href=\"mailto:' + user1 + '@' + site1 + '\">');
 document.write(user + '@' + site + '</a></font>');
