--- a/lab/repita/index.htm
+++ b/lab/repita/index.htm
@@ -70,15 +70,15 @@
 
 <a class="noline" href="proximities.htm" target="prx">PROXIMITIES</a>
 <img src="blank.gif" height="1pt" width="66pt">
-<a class="noline" href="camps/immo/index.htm" target="cmps">actions</a>
+<a class="noline" href="camps/immo/index.html" target="cmps">actions</a>
 <img src="blank.gif" height="1pt" width="66pt">
 <a class="noline" href="rbtcntrbutns.htm" target="prx">AI OPINIONS</a>
 
 </b></font>
 
-<br><br>
+<br><br><br>
 
-<font face="verdana" color="#004000" size="4"><i><b>
+<font face="verdana" color="#004000" size="4"><b>
 
 <a class="noline" href="../ars/index.htm" target="ars">ARMONICA ROTAZIONE SOCIALE</a>
 
@@ -88,15 +88,15 @@
 
 <a class="noline" href="../eulab/index.htm" target="elb">EULAB</a>
 <img src="blank.gif" width="77pt" height="1pt">
-</i><a class="noline" href="../bottega/index.htm" target="bottega">! HURRAH !</a><i>
+<a class="noline" href="../bottega/index.htm" target="bottega">! HURRAH !</a>
 <img src="blank.gif" width="77pt" height="1pt">
 <a class="noline" href="../index.htm" target="hpr">HYPER</a>
 
 </font>
 
-</b></i></font>
+</b></font>
 
-<br><br>
+<br><br><br>
 
 <font face="verdana" color="#001122" size="2">
 
