--- a/lab/repita/camps/immo/euro.html
+++ b/lab/repita/camps/immo/euro.html
@@ -1,107 +1,48 @@
 
 <html>
+
 <head>
-
 <meta charset="UTF-8">
-
-<link rel=stylesheet href="eulab_style1.css" type="text/css">
-
 <meta name="description" content="">
-
 <meta name="keywords" content="">
-
+<link rel=stylesheet href="camps.css" type="text/css">
 <TITLE>Laboratorio Eudemonia</TITLE>
-
 </head>
 
 <body>
 
-<center>
-
-<table width="77%" cellpadding="48pt"><tr><td align="center">
-
-<font size="7">
-
-<b><i>CAMPAGNA NAZIONALE</i></b>
-
-</font>
-
 <br>
 
-<font size="6">
+<center><table width="77%" cellpadding="48pt"><tr><td align="center">
 
-<b><i>per dissolvere<br>l'INIQUA FEROCIA del D.P.R. 380/2001</i></b>
-
-</font>
-
-<br><br><br><br><br>
-
-<font size="5">
-
-L'immane inadeguatezza del Parlamento italiano (c'è forse qualcuno lì dentro che sappia almeno cosa sia una <a class="ll02" href="../../repubblica-ancora-non-ce.htm" target="repu" title="la comproprietà nazionale cui ogni cittadino ha diritto di accedere e dovere di curare, che si può solo partecipare pro tempore, non possedere a vita">Repubblica</a>, come funzioni una <a class="ll02" href="../../democrazia-tirannide.htm" target="demo" title="una Società che gode di una Repubblica">Democrazia</a>?) nell'affrontare qualsiasi questione, generando continue ingiustizie e tremendi errori, tanto sul piano individuale che collettivo, tanto in ambito nazionale che globale, spinge a darsi da fare ancor più per cacciare via i <a class="ll02" href="../../../ars/index_it.htm" target="euro_it" title="gli assunti a vita in impieghi mai resi pubblici">proci</a> tutti dalla Res Publica italiana, europea e di ogni altro Paese della Terra. Perché son proprio loro, i perenni detentori della Res Publica: gli assunti a vita in impieghi mai ancora potuti divenire pubblici, l'origine di ogni problema. Perché non importa tanto chi governa quanto chi sta intorno a chi governa. Perché non v'è autentica Democrazia, non si gode davvero di una Repubblica, senza la <a class="ll02" href="../../banca-dei-pubblici-impieghi.htm" target="banca">Banca dei Pubblici Impieghi</a>.
-
-<br><br>
-
-Seguono lettere inviate (dal 10/30/<a class="ll02" href="../../../tec/years.htm" target="tec">56</a> al 30/11/<a class="ll02" href="../../../tec/years.htm" target="tec">56</a>) agli Euro Deputati (italiani e non) per informare dell'avvicinamento a quel gigantico passo in avanti (cui mai la sconfinata compagine di esperti e professori, professionisti e specialisti, eroi e santi, serbatoi di pensiero e università, una truppa stra-celebrata, stra-onorata, stra-pagata ogni mese senza ricevere indietro nulla, erroneamente stimata, ricordata e pianta di continuo se ha già tolto il disturbo, s'è mai degnata di avvicinarsi) che trasforma una nazione come la nostra (con la centralità rimasta come la avemmo dal duce e dal re) in una vera Democrazia: dotandola di una vera Repubblica. E, parola di <a class="ll02" href="../../../hl_it.htm" target="dandan">Danilo D'Antonio</a>, alias <a class="ll02" href="../../../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>, alias <a class="ll02" href="../../../index.htm" target="hl">HyperLinker</a>, il D.P.R. 380/2001, che m'ha rinfocolato lo sdegno per tutto questo, rimarrà nella Storia!
+<a class="none" href="index.html">
+<b><i>
+<div style="font-size: 48px;">CAMPAGNA (INTER)NAZIONALE</div>
+<div style="font-size: 34px;">per dissolvere l'INIQUA FEROCIA del D.P.R. 380/2001</div>
+</i></b>
+</a>
 
 <br><br><br><br>
 
-<b><a class="ll02" href="euro/euro_it.pdf" target="euro_it">Un'Eco Storica dall'Italia: l’Irrisolta Transizione alla Repubblica</a></b>
+<div style="font-size: 24px;">
+
+L'immane inadeguatezza del Parlamento italiano (c'è forse qualcuno lì dentro che sappia almeno cosa sia una <a class="linebold" href="../../repubblica-ancora-non-ce.htm" target="repu" title="la comproprietà nazionale cui ogni cittadino ha diritto di accedere e dovere di curare, che si può solo partecipare pro tempore, non possedere a vita">Repubblica</a>, come funzioni una <a class="linebold" href="../../democrazia-tirannide.htm" target="demo" title="una Società che, godendo di una Repubblica e di tutti i suoi genuini potenti meccanismi, è in grado, compatta, unita, di far fronte ad ogni difficoltà">Democrazia</a>?) nell'affrontare qualsiasi questione, generando continue ingiustizie e tremendi errori, tanto sul piano individuale che collettivo, tanto in ambito nazionale che globale, spinge a darsi da fare ancor più per cacciare via i <a class="linebold" href="../../../ars/index_it.htm" target="euro_it" title="gli assunti a vita in impieghi mai resi pubblici">proci</a> tutti: gli assunti a vita in impieghi mai ancora potuti divenire pubblici, indebiti perenni detentori della Res Publica, in Italia, in Europa, in ogni altro Paese della Terra. Perché son proprio loro l'origine di ogni problema locale e globale. Perché non importa tanto chi governa quanto chi sta intorno a chi governa. Perché non v'è autentica Democrazia, un Paese non gode di una Repubblica, senza la <a class="linebold" href="../../banca-dei-pubblici-impieghi.htm" target="banca">Banca dei Pubblici Impieghi</a>.
 
 <br><br>
 
-<b><a class="ll02" href="euro/euro_fr.pdf" target="euro_fr">Un Écho Historique Venant d'Italie : la Transition non Résolue Vers la République</a></b>
+Seguono lettere inviate (dal 10/30/<a class="line" href="../../../tec/years.htm" target="tec">56</a> al 30/11/<a class="line" href="../../../tec/years.htm" target="tec">56</a>) agli Euro Deputati (italiani e non) per informarli dell'avvicinarsi di quel gigantico passo in avanti (cui mai la sconfinata compagine di esperti e professori, ricercatori e scienziati, taniche di pensiero e università, eroi e santi, una truppa sterminata, stra-celebrata, stra-onorata, stra-pagata senza mai riceverne indietro nulla, erroneamente stimata, ricordata e pianta quando infine toglie il disturbo, s'è mai degnata di avvicinarsi) che trasforma una nazione come la nostra (con la centralità rimasta come la avemmo dal duce e dal re) in una vera Democrazia: dotandola di una vera Repubblica. E, parola di <a class="line" href="../../../hl_it.htm" target="dandan">Danilo D'Antonio</a>, alias <a class="line" href="../../../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a>, alias <a class="line" href="../../../index.htm" target="hl">HyperLinker</a>, il D.P.R. 380/2001 (che m'ha rinfocolato lo sdegno per tutto questo) rimarrà nella Storia!
 
-<br><br>
+</div>
 
-<b><a class="ll02" href="euro/euro_es.pdf" target="euro_es">Un Eco Histórico Proveniente de Italia: La Transición No Resuelta Hacia la República</a></b>
+<br><br><br>
 
-<br><br>
+<div style="font-size: 32px;">
 
-<b><a class="ll02" href="euro/euro_pt.pdf" target="euro_pt">Um Eco Histórico Proveniente de Itália: A Transição Não Resolvida Para à República</a></b>
+<a class="linebold" href="euro_1.html">Per aver contribuito a cambiarla, la Storia!</a>
 
-<br><br>
+</div>
 
-<b><a class="ll02" href="euro/euro_en.pdf" target="euro_en">A Historical Echo from Italy: The Unresolved Transition to the Republic</a></b>
-
-<br><br>
-
-<b><a class="ll02" href="euro/euro_de.pdf" target="euro_de">Ein historisches Echo aus Italien: Der ungelöste Übergang zur Republik</a></b>
-
-</font>
-
-<br><br><br><br><br>
-
-<font size="5"><b><a class="ll02" href="index.htm" target="">D.P.R. 380/2001: CERTIFICA l'INIQUA FEROCIA del PARLAMENTO ITALIANO</a></b></font>
-
-<br><br>
-
-<i><font size="4">
-
-<b><a class="ll02" href="../../../hl_it.htm" target="dandan">Danilo D'Antonio</a></b> - 
-<b><a class="ll02" href="../../../eulab/index.htm" target="eulab">Laboratorio Eudemonia</a></b>
-
-</i>
-
-<br>
-
-email: dda@hyperlinker.org - PEC: danilo.dantonio@domicilio.online
-
-<br>
-
-smart: (solo WSP) 339 5014947
-
-</font></i>
-
-</center>
-
-</font>
-
-</td></tr></table>
-
-<br>
-
-</center>
+</td></tr></table></center>
 
 </body>
 </html>
