--- a/lab/sub/1/index.html
+++ b/lab/sub/1/index.html
@@ -1,6 +1,6 @@
 <HTML>
 
-<!-- Author: Copyright © HyperLinker -->
+<!-- Author: Dan HyperLinker -->
 
 <HEAD>
 
@@ -8,60 +8,33 @@
 
 <link rel=stylesheet href="hyperlinker_style.css" type="text/css">
 
-<meta name="description" content="">
+<meta name="description" content="HyperLinker.com, HyperLinker.net, HyperLinker.org, hyperlinker, Laboratorio di ricerca filosofica: materiale per la crescita personale, manuale di Training Autogeno, guida alla meditazione, tecniche e strumenti per la mente, formula magica, aforismi...">
 
-<meta name="keywords" content="">
+<meta name="keywords" content="HyperLinker.com, HyperLinker.net, HyperLinker.org, hyperlinker, filosofia, psicologia, meditazione, new age, benessere, salute, globale, globalismo, globalista, ontologia, crescita personale, studi futuri, futuro, arte, società, mente, coscienza, energia, nuova era, globalizzazione, global, globalism, globalization, globalist, well-being, meditation, autogen training, ontology, future studies, future, personal growth, society, art, mind, consciousness, energy, reiki, rebirthing, New Age, new era, Equo Impiego Pubblico">
 
-<TITLE>Hyper Linker</TITLE>
+<TITLE>HyperLinker</TITLE>
 
 </HEAD>
 
-<BODY bgcolor="white" BGPROPERTIES="FIXED" text="navy" LINK="navy" VLINK="navy">
+<BODY bgcolor="white" background="" BGPROPERTIES="FIXED" text="navy" LINK="navy" VLINK="navy">
 
-<CENTER><TABLE WIDTH="100%" HEIGHT="96%"><TR><TD ALIGN="CENTER" VALIGN="MIDDLE">
+<center><table width="100%" height="100%"><tr><td align="center" valign="middle">
 
-<font face="arial" size="7" color="navy"><b>
+<table bgcolor="white" width="700" height="525pt"><tr><td width="50%" align="center" valign="top">
 
-<a class="asimple" href="repita/index.htm">
+<table bgcolor="white" background="" width="100%" height="100%" cellpadding="12pt" cellspacing="24pt"><tr><td width="100%" height="50%" align="center" valign="middle">
 
-THERE IS NO DEMOCRACY, NO REPUBLIC,<br>
-WITHOUT A PUBLIC JOBS BANK
+<font face="arial" size="2">
 
-</a>
-
-</b></font>
-
-<br><br><br><br>
-
-<font face="arial" size="5" color="navy"><b>
-
-Let the competent take their turn <i>pro tempore</i> in every public office, high or low.
-
-<br><br>
-
-What counts is not so much who governs, but the revolving circle that surrounds them.
-
-</b></font>
-
-<br><br><br><br>
-
-<font face="arial" size="6" color="navy"><b><i>
-
-<a class="asimple" href="hl_it.htm">Danilo D'Antonio</a>
-
-</i></b></font>
-
-</TD></TR></TABLE></CENTER>
-
-<center>
-
-<font face="verdana" size="2" color="#8f8f8f">
-
-Copyright every year by the <a class="simple_grey" href="eulab/index.htm" target="eulab">Eudaemony Laboratory</a>
+<a class="noline" href="donazioni.htm" title="Hyper Linker"><img src="qr_code.png" border="0"></a>
 
 </font>
 
-</center>
+</td></tr></table>
+
+</td></tr></table>
+
+</td></tr></table></center>
 
 </BODY>
 </HTML>
