--- a/lab/sub/index.html
+++ b/lab/sub/index.html
@@ -10,6 +10,8 @@
         const redirectMap = {
             'caos-immobiliare.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
             'repita.hyperlinker.org': 'https://hyperlinker.org/repita/index.htm',
+            'ars.hyperlinker.org': 'https://hyperlinker.org/ars/index.htm',
+            'change.hyperlinker.org': 'https://hyperlinker.org/change/index.htm',
         };
 
         if (redirectMap[hostname]) {
