--- a/lab/index.html
+++ b/lab/index.html
@@ -12,11 +12,16 @@
             'repita.hyperlinker.org': 'https://hyperlinker.org/repita/index.htm',
             'ars.hyperlinker.org': 'https://hyperlinker.org/ars/index.htm',
             'change.hyperlinker.org': 'https://hyperlinker.org/change/index.htm',
+            'dda.hyperlinker.org': 'https://hyperlinker.org/index.htm',
+            'change.hyperlinker.org': 'https://hyperlinker.org/change/index.htm',
         };
 
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
+        } else {
+            console.log('No redirect for hostname:', https://hyperlinker.org/index.htm);
         }
+
     </script>
 
     <style>
@@ -25,7 +30,13 @@
 </head>
 
 <body>
-redirect to ...
+
+<CENTER><TABLE WIDTH="100%" HEIGHT="96%"><TR><TD ALIGN="CENTER" VALIGN="MIDDLE">
+
+<a href="index.htm">Hyper Linker</a>
+
+</TD></TR></TABLE></CENTER>
+
     </body>
 </html>
 
