--- a/lab/index.html
+++ b/lab/index.html
@@ -19,7 +19,7 @@
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
         } else {
-            console.log('No redirect for hostname:', https://hyperlinker.org/index.htm);
+            window.location.replace('https://hyperlinker.org/index.htm');
         }
 
     </script>
