--- a/lab/index.html
+++ b/lab/index.html
@@ -9,17 +9,34 @@
         const hostname = window.location.hostname;
         const redirectMap = {
             'caos-immobiliare.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
-            'repita.hyperlinker.org': 'https://hyperlinker.org/repita/index.htm',
+            'change.hyperlinker.org': 'https://hyperlinker.org/change/index.htm',
+            'dda.hyperlinker.org': 'https://hyperlinker.org/hl_it.htm',
+            'hyperlinker.org': 'https://hyperlinker.org/index.htm',
+            'public-jobs-bank.hyperlinker.org': 'https://hyperlinker.org/repita/dao_en.htm',
             'ars.hyperlinker.org': 'https://hyperlinker.org/ars/index.htm',
-            'change.hyperlinker.org': 'https://hyperlinker.org/change/index.htm',
-            'dda.hyperlinker.org': 'https://hyperlinker.org/index.htm',
-            'change.hyperlinker.org': 'https://hyperlinker.org/change/index.htm',
+            'repita.hyperlinker.org': 'https://hyperlinker.org/repita/index.htm',
+            'www.hyperlinker.org': 'https://hyperlinker.org/index.htm',
+            'abruzzo.hyperlinker.org': 'https://hyperlinker.org/abruzzo/index.htm',
+            'ars.hyperlinker.org': 'https://hyperlinker.org/ars/index.htm',
+            'bottega.hyperlinker.org': 'https://hyperlinker.org/bottega/index.htm',
+            'cnt.hyperlinker.org': 'https://hyperlinker.org/cnt/index.htm',
+            'eulab.hyperlinker.org': 'https://hyperlinker.org/eulab/index.htm',
+            'giorev.hyperlinker.org': 'https://hyperlinker.org/giorev/index.htm',
+            'mercato.hyperlinker.org': 'https://hyperlinker.org/mercato/index.htm',
+            'mol.hyperlinker.org': 'https://hyperlinker.org/mol/index.htm',
+            'patchwork.hyperlinker.org': 'https://hyperlinker.org/patchwork/index.htm',
+            'path.hyperlinker.org': 'https://hyperlinker.org/path/index.htm',
+            'planetearth.hyperlinker.org': 'https://hyperlinker.org/planetearth/index.htm',
+            'sala.hyperlinker.org': 'https://hyperlinker.org/sala/index.htm',
+            'spg.hyperlinker.org': 'https://hyperlinker.org/spg/index.htm',
+            'switch.hyperlinker.org': 'https://hyperlinker.org/switch/index.htm',
+            'tec.hyperlinker.org': 'https://hyperlinker.org/tec/index.htm',
+            'whole_earth.hyperlinker.org': 'https://hyperlinker.org/whole_earth/index.htm',
+            'wholeness.hyperlinker.org': 'https://hyperlinker.org/wholeness/index.htm',
         };
 
         if (redirectMap[hostname]) {
             window.location.replace(redirectMap[hostname]);
-        } else {
-            window.location.replace('https://hyperlinker.org/index.htm');
         }
 
     </script>
@@ -31,7 +48,7 @@
 
 <body>
 
-<CENTER><TABLE WIDTH="100%" HEIGHT="96%"><TR><TD ALIGN="CENTER" VALIGN="MIDDLE">
+<CENTER><TABLE WIDTH="100%" HEIGHT="100%"><TR><TD ALIGN="CENTER" VALIGN="MIDDLE">
 
 <a href="index.htm">Hyper Linker</a>
 
