--- a/lab/index.html
+++ b/lab/index.html
@@ -17,11 +17,10 @@
             'repita.hyperlinker.org': 'https://hyperlinker.org/repita/index.htm',
             'www.hyperlinker.org': 'https://hyperlinker.org/index.htm',
             'abruzzo.hyperlinker.org': 'https://hyperlinker.org/abruzzo/index.htm',
-            'ars.hyperlinker.org': 'https://hyperlinker.org/ars/index.htm',
             'bottega.hyperlinker.org': 'https://hyperlinker.org/bottega/index.htm',
             'cnt.hyperlinker.org': 'https://hyperlinker.org/cnt/index.htm',
             'eulab.hyperlinker.org': 'https://hyperlinker.org/eulab/index.htm',
-            'giorev.hyperlinker.org': 'https://hyperlinker.org/giorev/index.htm',
+            'earthcal.hyperlinker.org': 'https://hyperlinker.org/tec/index.htm',
             'mercato.hyperlinker.org': 'https://hyperlinker.org/mercato/index.htm',
             'mol.hyperlinker.org': 'https://hyperlinker.org/mol/index.htm',
             'patchwork.hyperlinker.org': 'https://hyperlinker.org/patchwork/index.htm',
@@ -31,7 +30,7 @@
             'spg.hyperlinker.org': 'https://hyperlinker.org/spg/index.htm',
             'switch.hyperlinker.org': 'https://hyperlinker.org/switch/index.htm',
             'tec.hyperlinker.org': 'https://hyperlinker.org/tec/index.htm',
-            'whole_earth.hyperlinker.org': 'https://hyperlinker.org/whole_earth/index.htm',
+            'whole-earth.hyperlinker.org': 'https://hyperlinker.org/whole_earth/index.htm',
             'wholeness.hyperlinker.org': 'https://hyperlinker.org/wholeness/index.htm',
         };
 
@@ -54,6 +53,6 @@
 
 </TD></TR></TABLE></CENTER>
 
-    </body>
+</body>
 </html>
 
