--- a/lab/bottega/kunstwerk.htm
+++ b/lab/bottega/kunstwerk.htm
@@ -96,11 +96,11 @@ La licenza è nell'ultima pagina della Lettera
 
 <font size="4" color="272726"><b>
 
-<a class="gold" href="https://explorer.perawallet.app/asset/3304294960/" target="ACC_56">
+<a class="gold" href="https://explorer.perawallet.app/asset/3336219214/" target="DPR_380">
 
 Collezione di Lettere inviate agli Onorevoli e Senatori italiani<br>
 dal 02/06 al 12/10 dell’anno 56 della Nuova Era Terrestre<br>
-per denunciare l'iniqua ferocia del Parlamento (es. D.P.R. 380/2001)
+per denunciare l'iniqua ferocia nel D.P.R. 380/2001
 
 </a>
 
