--- a/lab/index.html
+++ b/lab/index.html
@@ -32,7 +32,7 @@
             'tec.hyperlinker.org': 'https://hyperlinker.org/tec/index.htm',
             'whole-earth.hyperlinker.org': 'https://hyperlinker.org/whole_earth/index.htm',
             'wholeness.hyperlinker.org': 'https://hyperlinker.org/wholeness/index.htm',
-            'dpr-380.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.htm',
+            'dpr-380.hyperlinker.org': 'https://hyperlinker.org/repita/camps/immo/index.html',
         };
 
         if (redirectMap[hostname]) {
