--- a/lab/repita/camps/immo/art_cul.html
+++ b/lab/repita/camps/immo/art_cul.html
@@ -34,11 +34,15 @@
 
 <br>
 
-<i><a class="none" href="../../../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">Richiesta</a>: 9.000.000 di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand" title="Algorand">Algorand</a></i>
+In vendita presso <i><a class="none" href="../../../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>
 
 </td><td width="4%" align="center" valign="middle">
 
+<div style="font-size: 18px;">
+
 <br><br><br><br><a class="none" href="prefa.html">B<br>A<br>C<br>K</a>
+
+</div>
 
 </td><td width="48%" align="center" valign="middle">
 
@@ -58,7 +62,13 @@
 
 <br>
 
+In vendita presso <i><a class="none" href="../../../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>
+
+<!--
+
 <i><a class="none" href="../../../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">Richiesta</a>: 27.000.000 di <a class="none" href="https://coinmarketcap.com/currencies/algorand/" target="algorand" title="Algorand">Algorand</a></i>
+
+-->
 
 </td></tr></table></center>
 
