--- a/lab/repita/camps/immo/euro_1.html
+++ b/lab/repita/camps/immo/euro_1.html
@@ -26,6 +26,16 @@
 
 <br><br><br><br>
 
+<table width="100%" colspan="3"><tr><td width="3%" align="center" valign="middle">
+
+<div style="font-size: 18px;">
+
+<a class="none" href="prefa.html">B<br>A<br>C<br>K</a>
+
+</div>
+
+</td><td width="94%" align="center" valign="middle">
+
 <div style="font-size: 24px;">
 
 <b><a class="line" href="euro/euro_it.pdf" target="euro_it">Un'Eco Storica dall'Italia: l’Irrisolta Transizione alla Repubblica</a></b>
@@ -51,6 +61,16 @@
 <b><a class="line" href="euro/euro_de.pdf" target="euro_de">Ein historisches Echo aus Italien: Der ungelöste Übergang zur Republik</a></b>
 
 </div>
+
+</td><td width="3%" align="center" valign="middle">
+
+<div style="font-size: 18px;">
+
+<a class="none" href="art_cul.html">F<br>O<br>R<br>W<br>A<br>R<br>D</a>
+
+</div>
+
+</td></tr></table>
 
 <br><br><br><br>
 
