--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -26,7 +26,17 @@
 
 <br><br><br>
 
-<font size="5">
+<table width="100%" colspan="3"><tr><td width="10%" align="center" valign="middle">
+
+<div style="font-size: 18px;">
+
+<a class="none" href="prefa.html">B<br>A<br>C<br>K</a>
+
+</div>
+
+</td><td width="80%" align="center" valign="middle">
+
+<div style="font-size: 24px;">
 
 Prima lettera: a <b><a class="line" href="onorevole.pdf" target="onorevoli">Onorevoli</a></b>, <b><a class="line" href="senatrice.pdf" target="senatrice">Senatori</a></b>, alle <b><a class="line" href="eccellenza.pdf" target="eccellenze">Eccellenze</a></b> nel Paese.
 
@@ -57,6 +67,18 @@ Il problema di fondo è chiaro e inconfutabile:<br><b><a class="line" href="repu
 <br><br>
 
 Ad ogni Autorità, Eccellenza e Personalità nel Paese<br><b><a class="line" href="urge_intervento.pdf" target="repubblica">Urge Pubblica Presa di Posizione ed Intervento sulle Camere</a></b>.
+
+</div>
+
+</td><td width="10%" align="center" valign="middle">
+
+<div style="font-size: 18px;">
+
+<a class="none" href="euro.html">F<br>O<br>R<br>W<br>A<br>R<br>D</a>
+
+</div>
+
+</td></tr></table>
 
 <br><br><br>
 
