--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -17,15 +17,12 @@
 
 <table width="84%" cellpadding="48pt"><tr><td align="center">
 
+<a class="none" href="index.html">
 <b><i>
-<div style="font-size: 48px;">
-CAMPAGNA (INTER)NAZIONALE
-</div>
-
-<div style="font-size: 34px;">
-per dissolvere l'INIQUA FEROCIA del D.P.R. 380/2001
-</div>
+<div style="font-size: 48px;">CAMPAGNA (INTER)NAZIONALE</div>
+<div style="font-size: 34px;">per dissolvere l'INIQUA FEROCIA del D.P.R. 380/2001</div>
 </i></b>
+</a>
 
 <br><br>
 
