--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -34,7 +34,7 @@ Allo stato attuale delle cose, <b>i proprietari di un appartamento</b> (che comp
 
 <br><br>
 
-Dalla <b>Legge 47/1985</b> al <b>D.P.R. 380/2001</b>, la normativa obbliga i proprietari (anche se estranei agli abusi) a pagare sanzioni/fiscalizzazioni per sanare irregolarità commesse da altri. <b>L’articolo 29 identifica chiaramente i responsabili (committenti, costruttori, progettisti, direttori dei lavori) ma gli articoli 36 e 36-bis scaricano i pesi finanziari sul proprietario</b>. Senza nemmeno distinguere tra colpevoli e innocenti.
+Dalla <b>Legge 47/1985</b> al <b>D.P.R. 380/2001</b>, la normativa obbliga i proprietari (anche se estranei agli abusi) a pagare sanzioni/fiscalizzazioni per sanare irregolarità commesse da altri. <b>L’articolo 29 identifica chiaramente i responsabili (committenti, costruttori, progettisti, direttori dei lavori) ma gli articoli 36 e 36-bis scaricano i pesi finanziari sul proprietario</b>. Senza distinguere tra colpevoli e innocenti.
 
 </font>
 
@@ -60,7 +60,7 @@ Qui si invita dunque i legislatori ad una immediata riforma del D.P.R. 380/2001 
 
 <div style="background-color: #F8F8F8; font-size: 28px; padding: 24px;">
 
-Interventi sul suolo nazionale
+Lettere alle Autorità italiane
 
 <br>
 
