--- a/lab/corpus/wrk/art_cul (Copy).html
+++ b/lab/corpus/wrk/art_cul (Copy).html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-<center><table colspan="3" width="90%" height="100%" cellpadding="24pt" cellspacing="24pt"><tr><td width="48%" align="center" valign="middle">
+<center><table width="90%" height="100%" cellpadding="24pt" cellspacing="24pt"><tr><td width="48%" align="center" valign="middle">
 
 <a class="none" href="https://explorer.perawallet.app/asset/3336219214/" target="3336219214" title="Registrazione del bene digitale tramite Algorand Standard Asset">
 
@@ -65,12 +65,6 @@ In vendita presso <i><a class="none" href="../../../bottega/index.htm" target="b
 In vendita presso <i><a class="none" href="../../../bottega/index.htm" target="bottega" title="Bottega alla Buona Sorte">La Bottega della Buona Sorte</a></i>
 
 </td></tr></table></center>
-
-<center>
-
-        <span style="font-size: 28px;">Opera d'arte non è solo una pittura, una scultura, una foto ... o che altro si esponga o batta all'asta.<br>Un'opera d'arte è un contenuto prodotto da prolungata attenzione, cura, amore e passione.<br>Che possa essere ceduto, venduto, trasferito. Queste sopra sono Opere d'Arte.</span>
-        
-</center>
 
 <br><br>
 
