--- a/lab/repita/camps/immo/euro.html
+++ b/lab/repita/camps/immo/euro.html
@@ -15,7 +15,7 @@
 
 <center><table width="77%" cellpadding="48pt"><tr><td align="center">
 
-<a class="none" href="index.html">
+<a class="none" href="prefa.html">
 <b><i>
 <div style="font-size: 48px;">CAMPAGNA (INTER)NAZIONALE</div>
 <div style="font-size: 34px;">per dissolvere l'INIQUA FEROCIA del D.P.R. 380/2001</div>
