--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -26,7 +26,7 @@
 
 <br><br><br>
 
-<table width="100%" colspan="3"><tr><td width="10%" align="center" valign="middle">
+<table width="100%"><tr><td width="10%" align="center" valign="middle">
 
 <div style="font-size: 18px;">
 
@@ -74,7 +74,7 @@ Ad ogni Autorità, Eccellenza e Personalità nel Paese<br><b><a class="line" hre
 
 <div style="font-size: 18px;">
 
-<a class="none" href="euro.html">F<br>O<br>R<br>W<br>A<br>R<br>D</a>
+<a class="none" href="euro_1.html">F<br>O<br>R<br>W<br>A<br>R<br>D</a>
 
 </div>
 
