--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -30,11 +30,11 @@
 
 <font size="5">
 
-Allo stato attuale delle cose, <b>i proprietari di un appartamento</b> (che comprarono decenni fa, quando tecniche, procedure, prassi erano così diverse) <b>che vi scoprano oggi una irregolarità risalente ab origine, pur innocenti, per regolarizzare l'"abuso" devono essi pagarne le sanzioni e gli oneri di fiscalizzazione</b>, in caso d'impossibile demolizione. Non i responsabili di quegli abusi vengono puniti ma i proprietari innocenti!
+Allo stato attuale delle cose, <b>i proprietari di un appartamento</b> (che comprarono decenni fa, quando tecniche, procedure, prassi erano molto diverse) <b>che vi scoprano oggi una irregolarità risalente ab origine, pur estranei all'"abuso", per regolarizzare il loro bene devono essi pagarne le sanzioni ed altri oneri</b>. Non i competenti e responsabili di quegli abusi vengono puniti ma i proprietari innocenti!
 
 <br><br>
 
-Dalla <b>Legge 47/1985</b> al <b>D.P.R. 380/2001</b>, la normativa obbliga i proprietari (anche se estranei agli abusi) a pagare sanzioni/fiscalizzazioni per sanare irregolarità commesse da altri. <b>L’articolo 29 identifica chiaramente i responsabili (committenti, costruttori, progettisti, direttori dei lavori) ma gli articoli 36 e 36-bis scaricano i pesi finanziari sul proprietario</b>. Senza distinguere tra colpevoli e innocenti.
+Dalla <b>Legge 47/1985</b> al <b>D.P.R. 380/2001</b>, la normativa obbliga i proprietari (anche se estranei agli abusi) a pagare sanzioni/fiscalizzazioni per sanare irregolarità commesse da altri. <b>L’articolo 29 identifica chiaramente i responsabili (committenti, costruttori, progettisti, direttori dei lavori) ma gli articoli 36 e 36-bis scaricano le pene finanziarie sul proprietario</b>. Senza distinguere tra colpevoli e innocenti.
 
 </font>
 
@@ -42,7 +42,7 @@ Dalla <b>Legge 47/1985</b> al <b>D.P.R. 380/2001</b>, la normativa obbliga i pro
 
 <font size="5">
 
-Chi ha acquistato in buona fede (decenni fa, quando nulla faceva presagire un futuro così meschino) viene trasformato in un indifeso capro espiatorio. Mentre <b>i colpevoli, tutti coloro che avevano l'esclusiva competenza in ogni fase del processo edilizio (e che avevano pure firmato/rilasciato regolari documenti ufficiali), restano impuniti, liberi di continuare le loro scorrettezze.</b> Ma le sanzioni e fiscalizzazioni (punizioni in forma di grandi pesi economici) non possono gravare su chi è vittima di un dolo.
+Chi ha acquistato in buona fede (decenni fa, quando i documenti ufficiali non erano messi in dubbio) viene trasformato in un indifeso capro espiatorio. Mentre <b>i colpevoli, coloro che avevano l'esclusiva competenza in ogni fase del processo edilizio (e che avevano rilasciato regolari documenti ufficiali), restano impuniti, il sistema rimanendo libero di continuare le sue scorrettezze.</b> Ma le sanzioni e fiscalizzazioni (punizioni in forma di elevati importi economici) non possono gravare su chi è vittima di un dolo.
 
 <br><br>
 
@@ -50,7 +50,7 @@ Chi ha acquistato in buona fede (decenni fa, quando nulla faceva presagire un fu
 
 <br><br>
 
-Qui si invita dunque i legislatori ad una immediata riforma del D.P.R. 380/2001 per esentare da ogni conseguenza nefasta i proprietari incolpevoli, limitando il loro obbligo all’aggiornamento documentale.
+Qui si richiama dunque i legislatori ad una immediata riforma del D.P.R. 380/2001 per esentare da ogni conseguenza nefasta i proprietari incolpevoli, limitando il loro obbligo all’aggiornamento documentale.
 
 </font>
 
@@ -76,7 +76,7 @@ Prima lettera all'EuroParlamento
 
 <br>
 
-<b><a class="none" href="euro.html">Un'eco storica dall'Italia</a></b>
+<b><a class="none" href="euro_1.html">Un'eco storica dall'Italia</a></b>
 
 </div>
 
@@ -85,7 +85,7 @@ Prima lettera all'EuroParlamento
 <div style="font-size: 28px; padding: 24px; display: inline-block;">
 
 Questa ormai non è più solo una campagna socio/politica<br>
-<b><a class="none" href="art_cul.html">D.P.R.380/2001: nasce l'iniziativa artistica e culturale</a></b>
+<b><a class="none" href="cultura.html">D.P.R.380/2001: nasce l'iniziativa culturale ed artistica</a></b>
 
 </div>
 
