--- a/lab/repita/camps/immo/euro_1.html
+++ b/lab/repita/camps/immo/euro_1.html
@@ -26,7 +26,7 @@
 
 <br><br><br><br>
 
-<table width="100%" colspan="3"><tr><td width="3%" align="center" valign="middle">
+<table width="100%"><tr><td width="3%" align="center" valign="middle">
 
 <div style="font-size: 18px;">
 
@@ -66,7 +66,7 @@
 
 <div style="font-size: 18px;">
 
-<a class="none" href="art_cul.html">F<br>O<br>R<br>W<br>A<br>R<br>D</a>
+<a class="none" href="prefa.html">F<br>O<br>R<br>W<br>A<br>R<br>D</a>
 
 </div>
 
