--- a/lab/corpus/index.html
+++ b/lab/corpus/index.html
@@ -34,31 +34,11 @@
 </head>
 <body>
 
-<div style="text-align: left; max-width: 900px; padding: 20px;">
+<div style="text-align: center; max-width: 900px; padding: 20px;">
 
-<div style="font-size: 36px;">
+<a class="nonenone" href="prefaz.html"><img src="eulogo.svg" width="70%"></a>
 
-<strong>Corpus di opere scelte di Danilo D'Antonio</strong>
-
-</div>
-
-<br><br>
-
-<div style="font-family='Adwaita Sans, sans-serif'; font-size: 28px;">
-
-L'Opera d'Arte trascende la mera forma. Non è solo scultura, pittura o immagine, sia essa materiale che digitale. L'Arte risiede non solo nel supporto, ma soprattutto nel Contenuto Ideativo, nel Pensiero e Progetto che esso veicola. Ecco perché il Corpus di scritti qui esposto si afferma come autentica Opera d'Arte intellettuale. Ed oggi qui, grazie alla tecnologia blockchain in grado di certificarla rendendola bene digitale, oltre alla pura esposizione, se ne permette anche la vendita e la cessione.
-
-</div>
-
-<br>
-
-<div style="font-size: 69px; text-align: right; max-width: 700px; padding: 20px;">
-
-<a class="nonenone" href="acc_56.html">&#9658;</a>
-
-</div>
-
-</div>
+<br><br><br><br><br><br>
 
 </body>
 </html>
