--- a/lab/bottega/kunstwerk.htm
+++ b/lab/bottega/kunstwerk.htm
@@ -34,123 +34,34 @@
 
 <font size="5" color="black"><b><i>
 
-Il pensiero evolutivo, in ambito culturale, morale e politico, sociale, è forse l'unica produzione umana sistematicamente rifiutata e non ricompensata dal sistema. I reggenti di questo non possono permettere siano messe in discussione le basi sulle quali sono cresciuti ricchi e potenti. Le conseguenze però ognuno le vede e patisce. Urge dunque istituire un Brevetto delle Idee, così che si possa aprire un Mercato delle Innovazioni Sociali, e finalmente, potendo ricevere un adeguato compenso, gli Umani potranno dedicarsi a questa attività.
+Il pensiero evolutivo, in ambito culturale, morale, politico e sociale, è forse l'unica produzione umana sistematicamente rifiutata e non ricompensata. I reggenti del sistema non possono permettere siano messe in discussione le basi sulle quali si son fatti ricchi e potenti. Le conseguenze ognuno le vede e patisce. Urge dunque istituire un Brevetto delle Idee, così che si possa aprire un Mercato delle Innovazioni Sociali, e finalmente, potendo gli Umani ricevere un adeguato compenso, si dedicheranno a questa attività.
 
-</i></B></font>
+</i></b></font>
 
 </td><td width="50%" align="right" valign="top">
 
 <font size="5" color="black"><b><i>
 
-Anche allo scopo di promuovere questa nuova via, di seguito espongo alcune mie opere d'arte mentale sotto forma di beni digitali. Il prezzo di ognuna, pur notevole per la mia persona, non è che l'infinitesima frazione di una elemosina rispetto alle immense fortune dilapidate per mantenere diverse generazioni di esperti e professori, filosofi e ricercatori, artisti e letterati, taniche di pensiero, politici, movimenti e partiti, senza che tutta questa sterminata truppa di falliti abbia mai prodotto nulla che avesse valore e facesse progredire.
+Anche allo scopo di promuovere questa nuova via, al link di seguito sono esposte, sotto forma di beni digitali, opere d'arte intellettuale selezionate per il loro valore. Il prezzo di ognuna, pur notevole, non è che l'infinitesima frazione di quella che comunque rimarrebbe una elemosina rispetto alle immense fortune dilapidate per mantenere generazioni di esperti e professori, filosofi e ricercatori, artisti e letterati, taniche di pensiero, politici, movimenti e partiti, senza che costoro abbiano mai prodotto nulla che avesse valore.
 
 </i></b></font>
 
 </td></tr></table></center>
 
-<br><br>
-
 <font size="5" color="black"><b><i>
 
-Pensate a tutte le grandi personalità nelle quali avete riposto tanta fiducia,<br>
-che tanto avete stimato. Tra tutti loro, non c'è stato alcuno che abbia saputo produrre<br>
+<a class="gold" href="../corpus/index.html">
+
+Pensate a tutte le grandi personalità nelle quali riponete tanta fiducia,<br>
+o che tanto avete stimato. Tra tutti loro, non c'è stato alcuno che abbia prodotto<br>
 anche uno solo dei Documenti che seguono. E giudicate da voi stessi se non avrebbero dovuto.<br>
 Queste lettere, questi saggi, hanno un valore storico enorme. Perché cambiano il corso della Storia. 
 
+</a>
+
 </i></b></font>
 
-<br><br><br><br><br><br>
-
-<div style="background-color: #FFF4C4; border: 3px solid #FFD700; padding: 48px; width: 700px">
-
-<font size="4" color="272726"><b>
-
-<a class="gold" href="https://explorer.perawallet.app/asset/3304294960/" target="ACC_56">
-
-Lettera Aperta inviata alla Corte Costituzionale<br>
-in data 27/02 nell’anno 56 della Nuova Era Terrestre<br>
-per denunciare l'assenza di una vera Repubblica e Democrazia
-
-</a>
-
-<br><br>
-
-Titolo dell'opera: "<i>Una seria questione d'illegalità</i>"
-
-<br><br>
-
-Opera immessa su network perenne <a class="gold" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a><br>e certificata su blockchain <a class="gold" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>
-
-<br><br>
-
-Somma richiesta: 7.000.000 (sette milioni) di Algorand<br>
-La licenza è nell'ultima pagina della Lettera
-
-</b></font>
-
-</div>
-
-<br><br><br>
-
-<div style="background-color: #FFF4C4; border: 3px solid #FFD700; padding: 48px; width: 700px">
-
-<font size="4" color="272726"><b>
-
-<a class="gold" href="https://explorer.perawallet.app/asset/3336219214/" target="DPR_380">
-
-Collezione di Lettere inviate agli Onorevoli e Senatori italiani<br>
-dal 02/06 al 12/10 dell’anno 56 della Nuova Era Terrestre<br>
-per denunciare l'iniqua ferocia nel D.P.R. 380/2001
-
-</a>
-
-<br><br>
-
-Titolo della Collezione: "<i>Che c'è di onorevole in tutto questo?</i>"
-
-<br><br>
-
-Opere immesse su network perenne <a class="gold" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a><br>e certificate su blockchain <a class="gold" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>
-
-<br><br>
-
-Somma richiesta: 9.000.000 (nove milioni) di Algorand<br>
-La licenza è presente nel frontespizio della Collezione 
-
-</b></font>
-
-</div>
-
-<br><br><br>
-
-<div style="background-color: #FFF4C4; border: 3px solid #FFD700; padding: 48px; width: 700px">
-
-<font size="4" color="272726"><b>
-
-<a class="gold" href="https://explorer.perawallet.app/asset/3304294960/" target="ACC_56">
-
-Collezione di Lettere inviate agli Euro Parlamentari, italiani e non<br>
-dal 20/09 al 30/09 dell’anno 56 della Nuova Era Terrestre<br>
-per rivelare il più grande inganno della Storia
-
-</a>
-
-<br><br>
-
-Titolo della Collezione: "<i>Un'eco storica dall'Italia</i>"
-
-<br><br>
-
-Opere immesse su network perenne <a class="gold" href="https://coinmarketcap.com/currencies/arweave/" target="arweave">Arweave</a><br>e certificate su blockchain <a class="gold" href="https://coinmarketcap.com/currencies/algorand/" target="algorand">Algorand</a>
-
-<br><br>
-
-Somma richiesta: 27.000.000 (ventisette milioni) di Algorand<br>
-La licenza è presente nel frontespizio della Collezione
-
-</b></font>
-
-</div>
+<!--
 
 <br><br>
 <br><br>
@@ -163,6 +74,8 @@ pacificamente più stravolgente della più sanguinaria delle rivoluzioni,<br>
 trova qui i <a class="gold" href="../eulab/indirizzi.htm" target="eulab">contatti</a> del Laboratorio Eudemonia. 
 
 </b></font> 
+
+-->
 
 </td></tr></table></center>
 
