--- a/lab/repita/camps/immo/italia.html
+++ b/lab/repita/camps/immo/italia.html
@@ -56,7 +56,7 @@ Quarto intervento: <b><a class="line" href="dpr380.pdf" target="280-2021">Art. 3
 
 Visione d'insieme: <b><a class="line" href="40_anni.pdf" target="40_anni">Quarant'anni di troppo!</a></b> Riforma subito.
 
-<br><br>
+<br>
 
 Le riforme continuano ma nei dibattiti mancano sempre:<br>i <b><a class="line" href="urgono.pdf" target="urgono-rappresentanti">Rappresentanti dei Proprietari Innocenti</a></b>!
 
@@ -64,9 +64,23 @@ Le riforme continuano ma nei dibattiti mancano sempre:<br>i <b><a class="line" h
 
 Il problema di fondo è chiaro e inconfutabile:<br><b><a class="line" href="repubblica.pdf" target="repubblica" title="ad Onorevoli e Senatori">Il DPR 380/2001: Sintomo dell’Irrisolta Transizione alla Repubblica</a></b>
 
+<!--
+<br><br>
+Ad ogni Autorità, Eccellenza e Personalità nel Paese
+-->
+
+<br>
+
+<b><a class="line" href="urge_intervento.pdf" target="datevi_da_fare">Urge Pubblica Presa di Posizione ed Intervento sulle Camere</a></b>.
+
 <br><br>
 
-Ad ogni Autorità, Eccellenza e Personalità nel Paese<br><b><a class="line" href="urge_intervento.pdf" target="repubblica">Urge Pubblica Presa di Posizione ed Intervento sulle Camere</a></b>.
+<div style="background-color: #F8F8F8; width: 80%; padding: 12px;">
+
+Lettera al Presidente della Repubblica<br>
+<b><a class="line" href="pres/pres.pdf" target="presidente">D.P.R. 380/2001: l'iniquità lede l'immagine del Presidente della Repubblica</a></b>
+
+</div>
 
 </div>
 
@@ -80,7 +94,7 @@ Ad ogni Autorità, Eccellenza e Personalità nel Paese<br><b><a class="line" hre
 
 </td></tr></table>
 
-<br><br><br>
+<br><br>
 
 <i>
 <div style="font-size: 22px;">
