--- a/lab/repita/camps/immo/prefa.html
+++ b/lab/repita/camps/immo/prefa.html
@@ -56,7 +56,7 @@ Qui si richiama dunque i legislatori ad una immediata riforma del D.P.R. 380/200
 
 </td></tr></table>
 
-<table width="100%" colspan="2" cellpadding="48pt"><tr><td width="50%" align="center" valign="top">
+<table width="100%" colspan="2" cellpadding="48pt"><tr><td width="40%" align="center" valign="middle">
 
 <div style="background-color: #F8F8F8; font-size: 28px; padding: 24px;">
 
@@ -68,7 +68,17 @@ Lettere alle Autorità italiane
 
 </div>
 
-</td><td width="50%" align="center" valign="top">
+</td><td width="20%" align="center" valign="middle">
+
+<div style="background-color: #F8F8F8; font-size: 28px; padding: 24px;">
+
+<b><a class="none" href="dossier_dpr.pdf">sintesi</a></b>
+
+<div style="font-size: 18px; ">in slide</div>
+
+</div>
+
+</td><td width="40%" align="center" valign="middle">
 
 <div style="background-color: #F8F8F8; font-size: 28px; padding: 24px;">
 
